syntax = "proto3";
package relay;

message Message {
  oneof payload {
    ToolCall tool_call = 1;
    ToolResult tool_result = 2;
    Execute execute = 3;
    Result result = 4;
    Error error = 5;
    Ping ping = 6;
    Pong pong = 7;
  }
}

message ToolCall {
  string id = 1;
  string tool = 2;
  bytes arguments = 3;
}

message ToolResult {
  string id = 1;
  bool success = 2;
  bytes result = 3;
  string error = 4;
}

message Execute {
  string code = 1;
  repeated string remote_tools = 2;
  map<string, string> local_tools = 3;
}

message Result {
  bytes data = 1;
}

message Error {
  string id = 1;
  string error = 2;
  string code = 3;
}

message Ping {
  string id = 1;
}

message Pong {
  string id = 1;
}
